# CLR_Bayesian_Alignment

./: .gitignore  README.md  UPDATE_LOG.md  pyproject.toml  requirements.txt  section2.4.1_st_v3.ipynb  sig_est01_fspace_CLR.py  temaplate.ipynb
data/: data_st.npz
scripts/: generate_data_st.py  run_alg3_smoke.py  run_scale_bench.py
src/alg3/: __init__.py  clr.py  clr_fallback.py  inference.py  modeling.py
src/alg3_standalone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alg3_run.py
